tree_sitter_v/grammar.js
    source_file: ($) =>
      seq(
        optional($.module_clause),
        optional($.import_list),
        repeat(
          choice(
            seq($._top_level_declaration, optional(semi)),
            seq($._statement, optional(semi)),
          ),
        ),
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $.type_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
      ),

    // TODO: нужны ли нам тут атрибуты?
    function_declaration: ($) => prec.right(PREC.resolve,
      seq(
        field('attributes', optional($.attributes)),
        optional($.visibility_modifiers),
        'fn',
        field('receiver', optional($.receiver)),
        field('name', $._function_name),
        field('generic_parameters', optional($.generic_parameters)),
        field('signature', $.signature),
        field('body', optional($.block))
      )),

    _function_name: ($) => choice($.binded_identifier, $.identifier, $.overloadable_operator),

    parameter_list: ($) =>
      prec(PREC.resolve, seq("(", comma_sep($.parameter_declaration), ")")),

    parameter_declaration: ($) =>
      seq(
        field('mutability', optional($.mutability_modifiers)),
        field("name", $.identifier),
        optional(field("variadic", "...")),
        field("type", choice($.plain_type, $.option_type))
      ),

    struct_declaration: ($) =>
      seq(
        field('attributes', optional($.attributes)),
        optional($.visibility_modifiers),
        choice('struct', 'union'),
        field('name', choice($.identifier, $.binded_identifier)),
        field('generic_parameters', optional($.generic_parameters)),
        $._struct_body,
      ),

    _struct_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            seq($.struct_field_scope, optional(terminator)),
            seq($.struct_field_declaration, optional(terminator)),
          ),
        ),
        '}'
      ),

    // pub:
    // mut:
    // pub mut:
    // __global:
    enum_declaration: ($) =>
      seq(
        field("attributes", optional($.attributes)),
        optional($.visibility_modifiers),
        'enum',
        field("name", $.identifier),
        optional($.enum_backed_type),
        $._enum_body
      ),

    _enum_body: ($) =>
      seq(
        "{",
        repeat(seq($.enum_field_definition, optional(terminator))),
        "}"
      ),

    interface_declaration: ($) =>
      seq(
        field('attributes', optional($.attributes)),
        optional($.visibility_modifiers),
        'interface',
        field('name', choice($.identifier, $.binded_identifier)),
        field('generic_parameters', optional($.generic_parameters)),
        $._interface_body,
      ),

    _interface_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            seq($.struct_field_scope, optional(terminator)),
            seq($.struct_field_declaration, optional(terminator)),
            seq($.interface_method_definition, optional(terminator)),
          ),
        ),
        '}'
      ),

    _expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.call_expression,
        $.type_initializer,
        $.function_literal,
        $.empty_literal_value,
        $.binded_identifier,
        $.reference_expression,
        $._max_group,
        $.map_init_expression,
        $.array_creation,
        $.empty_array_creation,
        $.fixed_array_creation,
        $.unary_expression,
        $.binary_expression,
        $.is_expression,
        $.not_is_expression,
        $.index_expression,
        $.slice_expression,
        // $.type_cast_expression,
        $.as_type_cast_expression,
        $.selector_expression,
        $._expression_with_blocks,
        $.enum_fetch,
      ),

    call_expression: ($) => prec.right(PREC.primary, choice(
      seq(
        field('function', token.immediate('json.decode')),
        field('arguments', $.special_argument_list),
        optional($.error_propagate),
      ),
      seq(
        field('name', $._expression),
        field('type_parameters', optional($.type_parameters)),
        field('arguments', $.argument_list),
        optional($.error_propagate),
      )
    )),

    type_parameters: ($) => prec(PREC.resolve,
      seq(
        '[',
        comma_sep1($.plain_type),
        ']',
      )
    ),

    argument_list: ($) => seq(
      '(',
      optional(seq(
        choice($.argument),
        repeat(seq(list_separator, choice($.argument))),
        optional(list_separator)
      )),
      ')'
    ),

    argument: ($) =>
      choice(
        $._expression,
        $.mutable_expression,
        $.keyed_element,
        $.spread_expression,
      ),

    keyed_element: ($) => seq(
      field('key', $.field_name),
      ':',
      field('value', $._expression)
    ),

    field_name: ($) => $.reference_expression,


    reference_expression: ($) => prec(PREC.primary, $.identifier),
    type_reference_expression: ($) => prec(PREC.primary, $.identifier),

    unary_expression: ($) => prec(PREC.unary, seq(
      field('operator', choice(...unary_operators)),
      field('operand', $._expression)
    )),

    binary_expression: ($) => {
      const table = [
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(...comparative_operators)],
        [PREC.and, '&&'],
        [PREC.or, '||'],
      ];

      return choice(...table.map(([precedence, operator]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ));
    },

    as_type_cast_expression: ($) =>
      seq($._expression, 'as', $.plain_type),

    type_cast_expression: ($) =>
      seq(
        field("type", $.plain_type),
        "(",
        field("operand", $._expression),
        ")"
      ),

    compile_time_identifier: ($) => comp_time($.identifier),

    or_block: ($) => seq("or", $.block),

    literal: ($) => choice(
      $.int_literal,
      $.float_literal,
      $._string_literal,
      $.rune_literal,
      $.none,
      $.true,
      $.false,
      $.nil,
    ),

    true: ($) => 'true',
    spread_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(
          '...',
          $._expression
        )
      ),

    array_creation: ($) => prec.right(PREC.multiplicative, $._non_empty_array),

    fixed_array_creation: ($) =>
      prec.right(
        PREC.multiplicative,
        seq($._non_empty_array, '!')
      ),

    _non_empty_array: ($) =>
      seq("[", repeat1(seq($._expression, optional(","))), "]"),

    pointer_type: ($) => prec(PREC.unary, seq("&", $.plain_type)),

    int_literal: ($) => token(int_literal),

    _string_literal: ($) =>
      choice(
        $.c_string_literal,
        $.raw_string_literal,
        $.interpreted_string_literal
      ),

    interpreted_string_literal: ($) =>
      interpolated_quoted_string($, $._string_opening),

    identifier: ($) =>
      token(
        seq(
          optional('@'),
          choice(unicode_letter, "_"),
          repeat(choice(letter, unicode_digit))
        ),
      ),

    // Some of the syntaxes in V are restricted
    // to be in a single line. That's why an identifier
    // immediate token is created to solve this concern.
    mutability_modifiers: ($) =>
      prec.left(
        choice(
          seq('mut', optional('static')),
          'shared'
        )
      ),

    mutable_identifier: ($) =>
      prec(
        PREC.resolve,
        seq(
          $.mutability_modifiers,
          $.identifier,
        )
      ),

    mutable_expression: ($) =>
      prec(
        PREC.resolve,
        seq(
          $.mutability_modifiers,
          $._expression
        )
      ),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression, $.mutable_expression))),

    // TODO: any expression on the right that is recognized
    // as external tokens will be deduced as separate nodes
    // instead of having under the same expression_list node
    _expression_list_repeat1: ($) =>
      seq(
        choice(
          $._expression,
          $.mutable_expression
        ),
        repeat1(
          seq(
            ",",
            choice(
              $._expression,
              $.mutable_expression
            )
          )
        )
      ),

    plain_type: ($) =>
      prec.right(PREC.primary,
        choice(
          $.type_reference_expression,
          // $.builtin_type,
          $._binded_type,
          $.qualified_type,
          $.pointer_type,
          $.array_type,
          $.fixed_array_type,
          $.function_type,
          $.generic_type,
          $.map_type,
          $.channel_type,
          $.shared_type,
          $.thread_type,
          $.none_type,
        ),
      ),

    _binded_type: ($) => prec.right(alias($.binded_identifier, $.binded_type)),

    qualified_type: ($) =>
      seq(
        field("module", $.identifier),
        ".",
        field("name", $.type_reference_expression)
      ),

    _statement_list: ($) =>
      repeat1(seq(
        $._statement,
        optional($._automatic_separator)
      )),

    _statement: ($) =>
      choice(
        $.simple_statement,
        $.assert_statement,
        $.continue_statement,
        $.break_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.spawn_statement,
        $.goto_statement,
        $.labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.compile_time_for_statement,
        $.send_statement,
        $.block,
        $.hash_statement
      ),

    simple_statement: ($) =>
      choice(
        $.var_declaration,
        $._expression,
        $.inc_statement,
        $.dec_statement,
        $.assignment_statement,
      ),

    var_declaration: ($) =>
      prec.right(
          seq(
              field("var_list", $.expression_list),
              ":=",
              field("expression_list", $.expression_list)
          )
      ),

    assignment_statement: ($) =>
      seq(
        field("left", $.expression_list),
        field("operator", choice(...assignment_operators)),
        field("right", $.expression_list)
      ),

    block: ($) =>
      seq(
        "{",
        optional(choice(
          $._statement_list,
          alias($._expression_list_repeat1, $.expression_list),
          alias($.empty_labeled_statement, $.labeled_statement),
          seq(
            $._statement_list,
            choice(
              alias($._expression_list_repeat1, $.expression_list),
              alias($.empty_labeled_statement, $.labeled_statement)
            )
          )
        )),
        "}"
      ),

    selector_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("operand", choice(
            $._expression,
            $.compile_time_identifier
          )),
          ".",
          field(
            "field",
            choice(
              $.reference_expression,
              // $.type_reference_expression,
              $.compile_time_identifier,
              $.compile_time_selector_expression
            )
          )
        )
      ),

    index_expression: ($) =>
      prec.right(
        PREC.primary,
        seq(
          field("operand", $._expression),
          "[",
          field("index", $._expression),
          "]",
          optional($.error_propagate)
        )
      ),

    attributes: ($) =>
        repeat1(seq($.attribute, optional(terminator))),

    attribute: ($) =>
        seq("[", seq($.attribute_expression, repeat(seq(";", $.attribute_expression))), "]"),

    attribute_expression: ($) =>
      prec(
        PREC.attributes,
        choice(
          $.if_attribute,
          $._plain_attribute,
        )
      ),

    // [if some ?]
    if_attribute: ($) => seq('if', $.identifier, optional("?")),

    _plain_attribute: ($) => choice(
        $.literal_attribute,
        $.value_attribute,
        $.key_value_attribute
    ),

    // ['/query']
    literal_attribute: ($) => $.literal,

    value_attribute: ($) => prec(
        PREC.attributes,
        field("name", choice(alias("unsafe", $.type_reference_expression), $.type_reference_expression)),
    ),

    // [key]
    // [key: value]
    key_value_attribute: ($) => prec(
      PREC.attributes,
      seq(
        $.value_attribute,
        ":",
        field("value", choice($.literal, $.identifier))
      ),
    ),

    enum_fetch : ($) => seq(".", $.identifier),
