tree_sitter_v/test/corpus/array.txt
===
Array with Values
===

fn main() {
  test := ['hello', 'world!']
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (var_declaration
        (expression_list (identifier))
        (expression_list
          (array
            (interpreted_string_literal)
            (interpreted_string_literal)))))))

===
Array with no values
===

fn main() {
  an = []
}

---

(source_file 
  (function_declaration 
    (identifier) 
    (parameter_list) 
    (block 
      (assignment_statement 
        (expression_list (identifier)) 
        (expression_list (array))))))
