tree_sitter_v/test/corpus/array_creation.txt
================================================================================
Simple array creation
================================================================================
[1, 2, 3]
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (array_creation
      (literal
        (int_literal))
      (literal
        (int_literal))
      (literal
        (int_literal)))))

================================================================================
Multiline array creation
================================================================================
[
    1,
    2,
    3
]
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (array_creation
      (literal
        (int_literal))
      (literal
        (int_literal))
      (literal
        (int_literal)))))

================================================================================
Multiline array creation with trailing comma
================================================================================
[
    1,
    2,
    3,
]
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (array_creation
      (literal
        (int_literal))
      (literal
        (int_literal))
      (literal
        (int_literal)))))

================================================================================
Simple array creation with trailing comma
================================================================================
[1, 2, 3, ]
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (array_creation
      (literal
        (int_literal))
      (literal
        (int_literal))
      (literal
        (int_literal)))))

================================================================================
Empty array creation
================================================================================
[]
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (array_creation)))

================================================================================
Fixed array creation
================================================================================
[1, 2, 3]!
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (fixed_array_creation
      (literal
        (int_literal))
      (literal
        (int_literal))
      (literal
        (int_literal)))))
