tree_sitter_v/test/corpus/compile_time.txt
================================================================================
Compile-time call expression
================================================================================
$embed_file('stubs/arrays.v', .zlib)
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (call_expression
      (reference_expression
        (compile_time_identifier
          (identifier)))
      (argument_list
        (argument
          (literal
            (interpreted_string_literal)))
        (argument
          (enum_fetch
            (identifier)))))))
