tree_sitter_v/test/corpus/compile_time_selector_expression.txt
================================================================================
Simple compile time selector
================================================================================
name.$(some)
name.$(some.other)
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (selector_expression
      (reference_expression
        (identifier))
      (reference_expression
        (identifier))))
  (simple_statement
    (selector_expression
      (reference_expression
        (identifier))
      (selector_expression
        (reference_expression
          (identifier))
        (reference_expression
          (identifier))))))
