tree_sitter_v/test/corpus/enum_fetch.txt
================================================================================
Simple enum fetch
================================================================================
.red
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (enum_fetch
      (reference_expression
        (identifier)))))

================================================================================
Simple enum fetch in condition
================================================================================
a == .red
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (binary_expression
      (reference_expression
        (identifier))
      (enum_fetch
        (reference_expression
          (identifier))))))
